<?xml version="1.0"?>
<package format="2">
  <name>lidar2px4</name>
  <version>0.0.0</version>
  <description>lidar2px4</description>

  <maintainer email="fins0305@gmail.com">HangyoCho</maintainer>

  <license>MIT</license>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_index_cpp</test_depend>
  <test_depend>ament_cmake</test_depend>
  <test_depend>ament_cmake_core</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
